spec/e2e/self/self_at_top_level.lit
self; # error: [line 1] Error at "self": Can't use 'self' outside of a type.
